[tool.poetry]
name = "24-2-4"
version = "0.1.0"
description = ""
authors = ["ChrVktr <chrvk@bk.ru>"]
readme = "README.md"
packages = [{include = "24"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
